Finaliza resolução da tarefa15

--- a/tarefa15/Makefile
+++ b/tarefa15/Makefile
@@ -5,8 +5,8 @@ LDFLAGS = -lm
 
 all: nuvem
 
-nuvem: nuvem.o tabela.o
-	gcc $(CFLAGS) nuvem.o tabela.o -o nuvem $(LDFLAGS)
+nuvem: nuvem.o tabela.o stopwords.o
+	gcc $(CFLAGS) nuvem.o tabela.o stopwords.o -o nuvem $(LDFLAGS)
 
 nuvem.o: nuvem.c
 	gcc $(CFLAGS) -c nuvem.c
@@ -14,5 +14,8 @@ nuvem.o: nuvem.c
 tabela.o: tabela.c
 	gcc $(CFLAGS) -c tabela.c
 
+stopwords.o: stopwords.c
+	gcc $(CFLAGS) -c stopwords.c
+
 clean:
-	rm -f nuvem nuvem.o tabela.o
+	rm -f nuvem nuvem.o tabela.o stopwords.o
