Adiciona a resolução da tarefa17

--- a/tarefa17/Makefile
+++ b/tarefa17/Makefile
@@ -5,8 +5,14 @@ LDFLAGS = -lm
 
 all: def_capitais
 
-def_capitais: def_capitais.c
-	gcc $(CFLAGS) *.c -o def_capitais $(LDFLAGS)
+def_capitais: def_capitais.o grafo_cidades.o
+	gcc $(CFLAGS) *.o -o def_capitais $(LDFLAGS)
+
+def_capitais.o: def_capitais.c
+	gcc $(CFLAGS) -c def_capitais.c
+
+grafo_cidades.o: grafo_cidades.c
+	gcc $(CFLAGS) -c grafo_cidades.c
 
 clean:
-	rm -f def_capitais
+	rm -f def_capitais *.o
